# RAG_ver1

./: README.md
doc/RAG/: when should use.txt
rag/: README.md  app.py  pyproject.toml  requirements.txt  typesense.ipynb
rag/data/csv/: learning_topics.csv
rag/data/vector_store/: chroma.sqlite3
rag/faiss_store/: faiss.index  metadata.pkl
rag/notebook/: csv_loader.ipynb  directory_loader.ipynb  document.ipynb  pdf_loader.ipynb  webbase_loader.ipynb
rag/src/: search.py
