[project]
name = "rag"
version = "0.1.0"
description = "Add your description here munir"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "chromadb",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-groq",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "scikit-learn",
    "sentence-transformers",
    "faiss-cpu>=1.14.3",
    "python-dotenv>=1.2.2",
]
